syntax = "proto3";

package proto;
option go_package = "./;proto";

enum FriendOnlineState {
  FRIEND_ONLINE_STATE_FREIEND_DISCONNECT = 0;
  FRIEND_ONLINE_STATE_ONLINE = 1;
}
