syntax = "proto3";

package proto;
option go_package = "./;proto";

message HeadImage {
  uint32 avatarId = 1;
}
