syntax = "proto3";

package proto;
option go_package = "./;proto";

enum PlatformType {
  PLATFORM_TYPE_EDITOR = 0;
  PLATFORM_TYPE_IOS = 1;
  PLATFORM_TYPE_ANDROID = 2;
  PLATFORM_TYPE_PC = 3;
  PLATFORM_TYPE_PS_4 = 4;
  PLATFORM_TYPE_SERVER = 5;
  PLATFORM_TYPE_CLOUD_ANDROID = 6;
  PLATFORM_TYPE_CLOUD_IOS = 7;
  PLATFORM_TYPE_PS_5 = 8;
  PLATFORM_TYPE_CLOUD_WEB = 9;
  PLATFORM_TYPE_CLOUD_TV = 10;
}
