syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ProfilePicture.proto";

message SetPlayerHeadImageRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 4015;
  }

  int32 retcode = 1;
  uint32 avatar_id = 2;
  ProfilePicture profile_picture = 3;
}
