syntax = "proto3";

package proto;
option go_package = "./;proto";


message SetPlayerNameRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 124;
  }

  int32 retcode = 12;
  string nick_name = 6;
}
